tach layout rieng va tao controllers de quan ly cac ham rieng, tao routers det quan ly cac duong dan

--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,12 +1,14 @@
-a(href="/users/create") New 
-h1 User list
-form(action="/users/search", method="get")
-    input(type="text", name="q")
-    button search
+extends ../layouts/common
+block content
+        a(href="/users/create") New 
+        h1 User list
+        form(action="/users/search", method="get", class="d-flex")
+            input(type="text", name="q", class="form-control")
+            button(class="btn btn-primary ml-2") search
 
-ul  
-    each user in users
-        li
-            span= user.name
-            span &nbsp;
-            a(href="/users/" +  user.id) View
+        ul  
+            each user in users
+                li
+                    span= user.name
+                    span &nbsp;
+                    a(href="/users/" +  user.id) View
