--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -1,5 +1,7 @@
-h1 Create new user 
-form(action="/users/create", method="post") 
-    label Name
-    input(type="text", name="name") 
-    button Create
+extends ../layouts/common
+block content
+    h1 Create new user 
+    form(action="/users/create", method="post", class="d-flex") 
+        label Name
+        input(type="text", name="name",class="form-control") 
+        button(class="ml-2") Create
