--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -3,9 +3,9 @@ html
         link( href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css",rel="stylesheet",integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH", crossorigin="anonymous")
     body 
         block header
-            nav.navbar.navbar-expand-lg.bg-dark-subtle
+            nav.navbar.navbar-expand-lg.bg-dark-subtle  
                 .container-fluid
-                    a.navbar-brand(href='#') Navbar
+                    a.navbar-brand(href='#') Huu Danh
                     button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
                         span.navbar-toggler-icon
                     #navbarSupportedContent.collapse.navbar-collapse
@@ -30,5 +30,6 @@ html
                         form.d-flex(role='search')
                             input.form-control.me-2(type='search', placeholder='Search', aria-label='Search')
                             button.btn.btn-outline-success(type='submit') Search
-        block content
+        .container.pt-5 
+            block content
         
