--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -1,7 +1,15 @@
 extends ../layouts/common
 block content
     h1 Create new user 
-    form(action="/users/create", method="post", class="d-flex") 
-        label Name
-        input(type="text", name="name",class="form-control") 
-        button(class="ml-2") Create
+    if errors 
+        each error in errors
+            .alert.alert-danger= error
+    form(action="/users/create", method="post") 
+        .form-group
+            label(for="name") Name
+            input#name.form-control(type="text", name="name", value=values ? values.name : "") 
+        .form-group
+            label(for="phone") Phone
+            input#phone.form-control(type="text", name="phone", value=values ? values.phone : "") 
+        
+        button.btn.btn-primary Create
