--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,14 +1,23 @@
 extends ../layouts/common
 block content
-        a(href="/users/create") New 
-        h1 User list
-        form(action="/users/search", method="get", class="d-flex")
+    h1
+        span.mr-3 List Users
+        a.btn.btn-primary(href="/users/create") New 
+
+    .d-flex.align-items-center    
+        form.ml-auto(action="/users/search", method="get", class="d-flex")
             input(type="text", name="q", class="form-control")
             button(class="btn btn-primary ml-2") search
 
-        ul  
-            each user in users
-                li
-                    span= user.name
-                    span &nbsp;
-                    a(href="/users/" +  user.id) View
+    table.table
+        tr
+            th Name
+            th Phone 
+            th Actions
+
+        each user in users
+            tr
+                td= user.name
+                td= user.phone
+                td
+                    a.btn.btn-light(href="/users/" +  user.id) View
