--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -30,6 +30,8 @@ html
                         form.d-flex(role='search')
                             input.form-control.me-2(type='search', placeholder='Search', aria-label='Search')
                             button.btn.btn-outline-success(type='submit') Search
+            if user
+                p= user.name
         .container.pt-5 
             block content
         
