--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -4,11 +4,14 @@ block content
     if errors 
         each error in errors
             .alert.alert-danger= error
-    form(action="/users/create", method="post") 
+    form(action="/users/create", method="post", enctype="multipart/form-data") 
         .form-group
             label(for="name") Name
             input#name.form-control(type="text", name="name", value=values ? values.name : "") 
         .form-group
             label(for="phone") Phone
             input#phone.form-control(type="text", name="phone", value=values ? values.phone : "") 
+        .form-group
+            label(for="avatar") Avatar
+            input#phone.form-control(type="file", name="avatar") 
         button.btn.btn-primary Create
