--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -11,22 +11,13 @@ html
                     #navbarSupportedContent.collapse.navbar-collapse
                         ul.navbar-nav.me-auto.mb-2.mb-lg-0
                             li.nav-item
-                                a.nav-link.active(aria-current='page', href='#') Home
+                                a.nav-link.active(aria-current='page', href='') Home
                             li.nav-item
-                                a.nav-link(href='#') Link
-                            li.nav-item.dropdown
-                                a.nav-link.dropdown-toggle(href='#', role='button',data-bs-toggle='dropdown') Dropdown
-                                ul.dropdown-menu
-                                    li
-                                        a.dropdown-item(href='#') Action
-                                    li
-                                        a.dropdown-item(href='#') Another action
-                                    li
-                                        hr.dropdown-divider
-                                    li
-                                        a.dropdown-item(href='#') Something else here
+                                a.nav-link(href='/users') User
                             li.nav-item
-                                a.nav-link.disabled(aria-disabled='true') Disabled
+                                a.nav-link(href='/products') Products 
+                            li.nav-item
+                                a.nav-link(href='#') Cart
                         form.d-flex(role='search')
                             input.form-control.me-2(type='search', placeholder='Search', aria-label='Search')
                             button.btn.btn-outline-success(type='submit') Search
