--- a/views/products/index.pug
+++ b/views/products/index.pug
@@ -1,32 +1,14 @@
 extends ../layouts/common
 block content
-    each product in products
-        .container.px-4.text-center
-        .row.gx-5
-            .col
-                .p-3
-                    .card(style='width: 18rem;')
+    .row.g-4
+        each product in products
+            .col-xs-12.col-sm-6.col-md-4.mb-4
+                .card(style='width: 18rem;')
                     img.card-img-top(src= product.image, alt='...')
                     .card-body
                         h5.card-title= product.name
                         p.card-text= product.description
-                        a.btn.btn-primary(href='#') Add to card
-            .col
-                .p-3
-                    .card(style='width: 18rem;')
-                    img.card-img-top(src= product.image, alt='...')
-                    .card-body
-                        h5.card-title= product.name
-                        p.card-text= product.description
-                        a.btn.btn-primary(href='#') Add to card
-            .col
-                .p-3
-                    .card(style='width: 18rem;')
-                    img.card-img-top(src= product.image, alt='...')
-                    .card-body
-                        h5.card-title= product.name
-                        p.card-text= product.description
-                        a.btn.btn-primary(href='#') Add to card
+                        a.btn.btn-primary(href='/cart/add/'+ product.id) Add to card
     nav(aria-label='Page navigation example')
     ul.pagination
         li.page-item
